# Type_event

./: README.md  db.sqlite3  pyproject.toml  utils.py
cliente/: urls.py
eventos/: models.py  urls.py  views.py
eventos/migrations/: 0001_initial.py  0002_evento_criador.py  0003_rename_carga_horario_evento_carga_horaria.py  0004_rename_cor_segundaria_evento_cor_secundaria.py  0005_evento_participantes.py  0006_certificado.py
eventos/templates/: certificados_evento.html  gerenciar_evento.html  inscrever_evento.html  participantes_evento.html
media/: 0IADLhUv.csv
templates/bases/: base_evento.html
templates/partials/usuarios/: cadastro.html  login.html
templates/static/evento/css/: evento.css  gerenciar_evento.css
templates/static/usuarios/css/: usuarios.css
type_event/: settings.py  urls.py
usuarios/: urls.py  views.py
usuarios/templates/: cadastro.html
