[tool.poetry]
name = "type-event"
version = "0.1.0"
description = "Projeto do Curso da Python Full"
authors = ["joaocesarz <mercadinhodoleo95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"


[tool.poetry.group.dev.dependencies]
pillow = "^10.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
